--- a/style.css
+++ b/style.css
@@ -134,3 +134,24 @@ body {
     line-height: 1.8em;
     font-size: 1rem;
 }
+.fa-copy{
+    width: 14px;
+    height: 14px;
+}
+button {
+    height: 35px;
+    width: 35px;
+    padding: 5px 6px;
+    margin-left: 10px;
+    border-radius: 5px;
+}
+button:active{
+  background: #85f4a3;
+}
+.copy_con{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
